--- a/AttendanceTaker/res/layout/roster.xml
+++ b/AttendanceTaker/res/layout/roster.xml
@@ -34,7 +34,13 @@
 
     <ListView
         android:id="@+id/RosterList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/submitRoster"
+        android:text="Submit"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="wrap_content"
+        android:onClick="onSubmitButtonClick" />
 
 </LinearLayout>
