--- a/AttendanceTaker/res/layout/main.xml
+++ b/AttendanceTaker/res/layout/main.xml
@@ -1,49 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#c3c3c3"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
-
-      <EditText
-        android:id="@+id/username"
-        android:layout_width="fill_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1" />
-        
-     <EditText
-        android:id="@+id/password"
-        android:layout_width="fill_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1" />
     
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="64dp"
-        android:onClick="onAttendanceClick"
-        android:text="@string/TakeAttendance" />
+    
+        <TextView 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Username" />
+        
+        <EditText
+            android:id="@+id/usernameField"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        
+        <TextView 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password" />
+        
+        <EditText
+            android:id="@+id/passwordField"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        
+        <Button
+    	    android:id="@+id/login"
+    	    android:text="Login"
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="wrap_content"
+    	    android:onClick="onLoginClick" />
 
-    <Button
-        android:id="@+id/Button01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:onClick="onRosterClick"
-        android:text="@string/ViewRoster" />
-
-    <Button
-        android:id="@+id/Button02"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/Button01"
-        android:layout_centerVertical="true"
-        android:onClick="onActivityClick"
-        android:text="@string/AddActivity" />
-
-</RelativeLayout>
+</LinearLayout>
