--- a/AttendanceTaker/res/layout/activity_item.xml
+++ b/AttendanceTaker/res/layout/activity_item.xml
@@ -5,16 +5,51 @@
     android:paddingLeft="10sp" android:paddingRight="10sp"
     android:layout_height="wrap_content"
     android:orientation="horizontal" android:paddingTop="2sp">
-	<TextView 
-	    android:id="@+id/tvActivityName"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:padding="10dp"
-	    android:textSize="16sp" ></TextView>
-	<Button 
-	    android:layout_width="wrap_content" 
-	    android:id="@+id/btnEdit" 
-	    android:text="Edit" 
-	    android:layout_height="40dip"></Button>
+    
+    <ViewSwitcher
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/view_switcher"
+        android:layout_width="375px"
+        android:layout_height="wrap_content" >
+		<TextView 
+		    android:id="@+id/tvActivityName"
+		    android:layout_width="375px"
+		    android:layout_height="wrap_content"
+		    android:padding="10dp"
+		    android:textSize="16sp"
+		    android:textColor="#0099CC" >
+		</TextView>
+	    <EditText
+	        android:id="@+id/hidden_edit_view"
+		    android:layout_width="375px"
+		    android:layout_height="wrap_content"
+		    android:padding="10dp"
+		    android:textSize="16sp"
+		    android:textColor="#0099CC" >
+	    </EditText>
+    </ViewSwitcher>
+    
+    <ViewSwitcher
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/button_switcher"
+        android:layout_width="wrap_content"
+        android:layout_height="40dip" >
+<!--	<Button 
+		            android:background="@drawable/blue_button"
+        android:textColor="#ffffff"
+		    android:layout_width="wrap_content" 
+		    android:id="@+id/btnEdit" 
+		    android:text="Edit" 
+		    android:layout_height="40dip">
+		</Button>
+		<Button 
+		            android:background="@drawable/blue_button"
+        android:textColor="#ffffff"
+		    android:layout_width="wrap_content" 
+		    android:id="@+id/btnOk" 
+		    android:text="OK" 
+		    android:layout_height="40dip">
+		</Button> -->
+    </ViewSwitcher>
 
 </LinearLayout>
