--- a/AttendanceTaker/res/layout/profileactivity.xml
+++ b/AttendanceTaker/res/layout/profileactivity.xml
@@ -58,15 +58,14 @@
         <TextView
             android:layout_width="150px"
             android:layout_height="wrap_content"
-            android:text="Phone: "
+            android:text="Emergency Contact Phone: "
             android:textColor="#0099CC" />
 
         <TextView
             android:id="@+id/profilePhone"
             android:layout_width="250px"
-            android:layout_height="wrap_content"
+            android:layout_height="140dp"
             android:autoLink="phone"
-            android:text="123-453-2342"
             android:textColor="#000000" />
         
          <Button
@@ -98,7 +97,192 @@
             android:id="@+id/profileAddress"
             android:layout_width="250px"
             android:layout_height="119dp"
-            android:text="20 S. 39 St. Apt S3\nPhiladelphia, PA 19104"
+            android:textColor="#000000" />
+        
+         <Button
+        android:background="@drawable/blue_button"
+        android:textColor="#ffffff"
+        android:id="@+id/profileEdit"
+        android:layout_width="65px"
+        android:layout_height="wrap_content"
+        android:onClick="onEditAddressButtonClick"
+        android:text="Edit" />
+        
+    </LinearLayout>
+    
+        <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.99"
+        android:background="#ffffff"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="150px"
+            android:layout_height="wrap_content"
+            android:text="Grade: "
+            android:textColor="#0099CC" />
+
+        <TextView
+            android:id="@+id/profileGrade"
+            android:layout_width="250px"
+            android:layout_height="119dp"
+            android:textColor="#000000" />
+        
+         <Button
+        android:background="@drawable/blue_button"
+        android:textColor="#ffffff"
+        android:id="@+id/profileEdit"
+        android:layout_width="65px"
+        android:layout_height="wrap_content"
+        android:onClick="onEditAddressButtonClick"
+        android:text="Edit" />
+        
+    </LinearLayout>
+    
+        <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.99"
+        android:background="#ffffff"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="150px"
+            android:layout_height="wrap_content"
+            android:text="Emergency Contact Name: "
+            android:textColor="#0099CC" />
+
+        <TextView
+            android:id="@+id/profileEmergContName"
+            android:layout_width="250px"
+            android:layout_height="140dp"
+            android:textColor="#000000" />
+        
+         <Button
+        android:background="@drawable/blue_button"
+        android:textColor="#ffffff"
+        android:id="@+id/profileEdit"
+        android:layout_width="65px"
+        android:layout_height="wrap_content"
+        android:onClick="onEditAddressButtonClick"
+        android:text="Edit" />
+        
+    </LinearLayout>
+    
+        <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.99"
+        android:background="#ffffff"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="150px"
+            android:layout_height="wrap_content"
+            android:text="Emergency Contact Type: "
+            android:textColor="#0099CC" />
+
+        <TextView
+            android:id="@+id/profileEmergContType"
+            android:layout_width="250px"
+            android:layout_height="119dp"
+            android:textColor="#000000" />
+        
+         <Button
+        android:background="@drawable/blue_button"
+        android:textColor="#ffffff"
+        android:id="@+id/profileEdit"
+        android:layout_width="65px"
+        android:layout_height="wrap_content"
+        android:onClick="onEditAddressButtonClick"
+        android:text="Edit" />
+        
+    </LinearLayout>
+    
+        <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.99"
+        android:background="#ffffff"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="150px"
+            android:layout_height="wrap_content"
+            android:text="Site: "
+            android:textColor="#0099CC" />
+
+        <TextView
+            android:id="@+id/profileSite"
+            android:layout_width="250px"
+            android:layout_height="119dp"
+            android:textColor="#000000" />
+        
+         <Button
+        android:background="@drawable/blue_button"
+        android:textColor="#ffffff"
+        android:id="@+id/profileEdit"
+        android:layout_width="65px"
+        android:layout_height="wrap_content"
+        android:onClick="onEditAddressButtonClick"
+        android:text="Edit" />
+        
+    </LinearLayout>
+    
+        <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.99"
+        android:background="#ffffff"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="150px"
+            android:layout_height="wrap_content"
+            android:text="IDNumber: "
+            android:textColor="#0099CC" />
+
+        <TextView
+            android:id="@+id/profileIDNumber"
+            android:layout_width="250px"
+            android:layout_height="119dp"
+            android:textColor="#000000" />
+        
+         <Button
+        android:background="@drawable/blue_button"
+        android:textColor="#ffffff"
+        android:id="@+id/profileEdit"
+        android:layout_width="65px"
+        android:layout_height="wrap_content"
+        android:onClick="onEditAddressButtonClick"
+        android:text="Edit" />
+        
+    </LinearLayout>
+    
+        <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.99"
+        android:background="#ffffff"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="150px"
+            android:layout_height="wrap_content"
+            android:text="School "
+            android:textColor="#0099CC" />
+
+        <TextView
+            android:id="@+id/profileSchool"
+            android:layout_width="250px"
+            android:layout_height="119dp"
             android:textColor="#000000" />
         
          <Button
